--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Mon Jan 14 19:37:15 CET 2013
+#Mon Jan 14 19:59:59 CET 2013
 app.grails.version=2.2.0
 app.name=cours-grails-wishlist
 app.version=0.1
+plugins.spring-security-core=1.2.7.3
