add: twitter bootstrap

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
 #Grails Metadata file
-#Mon Jan 14 19:59:59 CET 2013
+#Mon Jan 14 21:31:09 CET 2013
 app.grails.version=2.2.0
 app.name=cours-grails-wishlist
 app.version=0.1
 plugins.spring-security-core=1.2.7.3
+plugins.twitter-bootstrap=2.2.2
